modules/network/main.tf


# Create virtual network
resource "azurerm_virtual_network" "this" {
  name                = "${var.prefix}-${var.environment}-vnet"
  address_space       = [var.address_space]
  location            = var.location
  resource_group_name = var.resource_group_name
  depends_on = [ azurerm_network_security_group.this ]

}
resource "time_sleep" "wait_5_seconds" {

  create_duration = "8s"
}
# Create subnet
resource "azurerm_subnet" "this" {
  name                 = "${var.prefix}-${var.environment}-subnet"
  resource_group_name  =  var.resource_group_name
  virtual_network_name = azurerm_virtual_network.this.name
  address_prefixes     = [var.address_prefixes]
  depends_on = [ time_sleep.wait_5_seconds ]

}



# Create Network Security Group and rules
resource "azurerm_network_security_group" "this" {
  name                = "${var.prefix}-${var.environment}-nsg"
  location            = var.location
  resource_group_name =  var.resource_group_name


  security_rule {
    name                       = "http"
    priority                   = 1001
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "80"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }
  security_rule {
    name                       = "ssh"
    priority                   = 900
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "22"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }
  security_rule {
    name                       = "ping"
    priority                   = 800
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Icmp"
    source_port_range          = "*"
    destination_port_range     = "*"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

  security_rule {
    name                       = "openvpn"
    priority                   = 803
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "*"
    source_port_range          = "*"
    destination_port_range     = "1194"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

}
